[workspace]

members = [
    "a_star", "backyard", "collections", "control_flow", "data_types", "enum_and_matching", "error_handling", "functions", "ownership", "reference_and_borrowing", "restaurant", "slice", "smart_pointers", "structt", "traits",
    "var_and_mut", "maze-solver", "concurrency", "async_future", "oop", "actix_axum"]
resolver = "2"
